--- a/css/sub.css
+++ b/css/sub.css
@@ -201,7 +201,7 @@
 #container.faq .faq-contents .list-cate li a.on { color: #FFFFFF; background: #333333;}
 #container.faq .faq-contents .cate-title { font-size: 1.3333rem; font-weight: 700; line-height: 1.9167rem; color: #202020; margin-bottom: 0.4167rem;}
 
-#container.inquiry .inquiry-contents { padding: 2.5rem 1.6667rem 2.0833rem;}
+#container.inquiry .inquiry-contents { padding: 2.5rem 1.6667rem 0;}
 #container.inquiry .inquiry-contents h3.title { font-size: 1.3333rem; font-weight: 700; line-height: 2.0833rem; color: #202020; text-align: center; margin-bottom: 2.5rem;}
 
 .accordion-list .accordion-item { border-bottom: 1px solid #E3E3E3;}
@@ -334,17 +334,16 @@
 #container.inquiry .comment table { width: 100%; table-layout: fixed;}
 #container.inquiry .comment table td { height: 6.25rem; font-size: 1.1667rem; line-height: 1.6667rem; color: #666666; text-align: left; padding: 1.25rem 0; border-bottom: 1px solid #E3E3E3; vertical-align: top;}
 #container.inquiry .comment table td strong { font-weight: 700; color: #404040; margin-bottom: 0.4167rem;}
-
-#container.inquiry .score-box { display: flex; align-items: center; justify-content: center; flex-direction: column; margin-top: 50px; padding: 30px 0; background: #F5F5F5; border: 1px solid #E3E3E3; border-radius: 12px;}
-#container.inquiry .score-box p { font-size: 16px; line-height: 26px; color: #666666;}
-#container.inquiry .score-box p strong { display: block; margin-bottom: 2px; font-size: 18px; font-weight: 500; color: #202020;}
+#container.inquiry .score-box { display: flex; align-items: center; justify-content: center; flex-direction: column; width: calc(100% + 3.3334rem); margin: 3.3333rem 0 0 -1.6667rem; padding: 2.5rem 0 3.3333rem; background: #F5F5F5;}
+#container.inquiry .score-box p { font-size: 1.1667rem; line-height: 2.1667rem; color: #666666;}
+#container.inquiry .score-box p strong { display: block; margin-bottom: 0.1667rem; font-size: 1.5rem; font-weight: 500; color: #202020;}
 #container.inquiry .score-box p span { color: #562BD1;}
 #container.inquiry .score-box .blind { position: absolute; overflow: hidden; margin: -1px; padding: 0; width: 1px; height: 1px; border: none; clip: rect(0, 0, 0, 0);}
-#container.inquiry .score-box .score { display: flex; position: relative; margin-top: 18px; width: 170px; height: 34px; overflow: hidden; background-color: #D0D0D0;}
-#container.inquiry .score-box .score:after { content: ""; display: block; position: absolute; left: 0; width: 100%; height: 34px; background: url(../img/star_none2.png) repeat-x left center; z-index: 1; pointer-events: none;}
-#container.inquiry .score-box .score .score-label { position: relative; width: 17px; height: 34px; z-index: 1; cursor: pointer;}
+#container.inquiry .score-box .score { display: flex; position: relative; margin-top: 1.6667rem; width: 19rem; height: 3.833rem; overflow: hidden; background-color: #D0D0D0;}
+#container.inquiry .score-box .score:after { content: ""; display: block; position: absolute; left: 0; width: 100%; height: 3.833rem; background: url(../img/star_none2.png) repeat-x left center; background-size: 20% 100%; z-index: 1; pointer-events: none;}
+#container.inquiry .score-box .score .score-label { position: relative; width: 1.9167rem; height: 3.833rem; z-index: 1; cursor: pointer;}
 #container.inquiry .score-box .score .score-label input { position: absolute; width: 0; height: 0; opacity: 0;}
-#container.inquiry .score-box .score .score-label .score-img { display: block; position: absolute; right: 0; width: 170px; height: 34px; pointer-events: none;}
+#container.inquiry .score-box .score .score-label .score-img { display: block; position: absolute; right: 0; width: 19rem; height: 3.833rem; pointer-events: none;}
 #container.inquiry .score-box .score .score-label input:checked + .score-img { background: #6435E9;}
 
 
